# VHAP

./: .gitignore  01_color_correct.job  02_track_becomminglit.sbatch  pyproject.toml  unpack_frames.py
vhap/: export_as_nerf_dataset.py  lerp_and_export.py  preprocess_color_correct.py  preprocess_video.py  track_becomminglit.py  track_goliath.py
vhap/config/: base.py  becomminglit.py  goliath.py
vhap/data/: becomminglit.py  goliath.py  goliath_dataset.py  image_folder_dataset.py  nersemble_dataset.py  video_dataset.py
vhap/model/: tracker.py
vhap/util/: annotate_goliath.py  color.py  image.py  landmark_detector_star.py  log.py  mesh.py  render_nvdiffrast.py  vector_ops.py  visualization.py
